Revert "areas por rol hecho (falta limpiar code))"
This reverts commit 82e261f2c0957796c68a66758f910965d677ac61.