@@ -67,8 +67,7 @@ public final class DirectoryAreas {
 
     building.setAllAreas(new ArrayList<>(Arrays.asList(basement, groundFloor, floor1, stairs, exterior)));
 
-    DirectoryUserGroups.setSpacesToUsers(new ArrayList<>(List.of(parking, hall, room1, room2,
-        room3, corridor, IT, stairs, exterior)));
+    //DirectoryDoors.setAllDoors(new ArrayList<>(Arrays.asList(d1, d2, d3, d4, d5, d6, d7, d8, d9)));
 
     rootArea = building;
   }
